Adding more start HTML structure and classes

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ismael Jimenez-Jurado's Portfolio!</title>
 </head>
-
 <body>
-    <main>
-    </main>
-    <footer class="footer">
-    </footer>
+   <header>
+    <h1>¡Hola!</h1>
+        <h2 class="motto">"Que encuentres tu valor en el mundo de la vigilia..."</h2>
+    <!-- Gonna be waiting to see if Brent Clouse will allow me to use his art -->
+        <!-- <img src="assets/images/bloodborne-lamp.gif" alt="bloodborne lamp pulsing"> -->
+   </header>
+<footer>
+    <!-- here we will need to include closing contents. Links to socials again, information on businesses,
+    contact links of other sorts -->
+</footer>
 </body>
-
 </html>
