adding photo and README updates

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ismael Jimenez-Jurado's Portfolio!</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
    <header>
-    <h1>¡Hola!</h1>
-        <h2 class="motto">"Que encuentres tu valor en el mundo de la vigilia..."</h2>
+    <nav></nav>
+    <h1>¡Hola!<br> <h2>¡Me llamo Ismael Jimenez-Jurado!</h2></h1> <!--On click of this we want to 
+        make sure it tranlsates to English-->
+        <h2 class="motto">"Welcome Home Good Hunter"</h2> <!--I want to make sure to
+        include on the styling for this that when you hover it changes to "May you
+        find your worth in the waking world with a smooth haze"-->
     <!-- Gonna be waiting to see if Brent Clouse will allow me to use his art -->
         <!-- <img src="assets/images/bloodborne-lamp.gif" alt="bloodborne lamp pulsing"> -->
+        <img class="bitmoji" src="assets/images/Avatar for portfolio.png" alt="Avatar of Ismael">
    </header>
 <footer>
     <!-- here we will need to include closing contents. Links to socials again, information on businesses,
