here are a lot of CSS changes and additions

--- a/index.html
+++ b/index.html
@@ -6,22 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ismael Jimenez-Jurado's Portfolio!</title>
     <link rel="stylesheet" href="./assets/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Bubblegum Sans' rel='stylesheet'>
 </head>
 <body>
    <header>
-    <nav></nav>
-    <h1>¡Hola!<br> <h2>¡Me llamo Ismael Jimenez-Jurado!</h2></h1> <!--On click of this we want to 
+    <nav class="hunter">
+        <a href="#">About Me!</a>
+        <a href="#">My Work!</a>
+        <a href="#">Contact Me!</a>
+    </nav>
+    <h2>¡Hola!<br>¡Me llamo<h1>Ismael Jimenez-Jurado!</h1></h2> <!--On click of this we want to 
         make sure it tranlsates to English-->
-        <h2 class="motto">"Welcome Home Good Hunter"</h2> <!--I want to make sure to
-        include on the styling for this that when you hover it changes to "May you
-        find your worth in the waking world with a smooth haze"-->
     <!-- Gonna be waiting to see if Brent Clouse will allow me to use his art -->
         <!-- <img src="assets/images/bloodborne-lamp.gif" alt="bloodborne lamp pulsing"> -->
-        <img class="bitmoji" src="assets/images/Avatar for portfolio.png" alt="Avatar of Ismael">
    </header>
+   <figure>
+    <img id="bitmoji" src="assets/images/Avatar for portfolio.png" alt="Avatar of Ismael">
+   </figure>
+   <main>
+    <div class="row">About Me!</div>
+        <div class="contents">
+            <p>My name is Ismael Jimenez-Jurado! I am in bootcamp to become a Full-stack </br>
+            developer! I have skills in HTML, CSS, JavaScript, and Sofftware Quality </br>
+            Assurance. I'm working on bettering myself technically within the coding realm</br>
+            so that I can focus on CI/CD quality within any organization! </p>
+        </div>
+    <div class="row">My Work!</div>
+        <div class="contents">
+            <p>Placeholder right now for any portfolio worthy projects for now</p>
+        </div>
+   </main>
 <footer>
+    <section>Contact me!</section>
+    <h2 class="motto">"Welcome Home Good Hunter"</h2> <!--I want to make sure to
+        include on the styling for this that when you hover it changes to "May you
+        find your worth in the waking world with a smooth haze"-->
     <!-- here we will need to include closing contents. Links to socials again, information on businesses,
     contact links of other sorts -->
+    <ul>
+        <nav class="contacts">
+            <a href="https://github.com/Idjjurado">GITHUB</a>
+            <a href="https://dev.to/idjjurado">DEV.TO</a>
+            <a href="mailto:ismael.david.jimenez@gmail.com">Send an EMAIL!</a> 
+            <!--This will openthe default mail client they use-->
+
+        </nav>
+    </ul>
 </footer>
 </body>
 </html>
