--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
    <header>
     <nav class="hunter">
-        <a href="#">About Me!</a>
-        <a href="#">My Work!</a>
-        <a href="#">Contact Me!</a>
+        <a class="topnav" href="#aboutme">About Me!</a>
+        <a class="topnav" href="#mywork">My Work!</a>
+        <a class="topnav" href="#socials">Contact Me!</a>
     </nav>
     <h2>¡Hola!<br>¡Me llamo<h1>Ismael Jimenez-Jurado!</h1></h2> <!--On click of this we want to 
         make sure it tranlsates to English-->
@@ -24,30 +24,29 @@
     <img id="bitmoji" src="assets/images/Avatar for portfolio.png" alt="Avatar of Ismael">
    </figure>
    <main>
-    <div class="row">About Me!</div>
+    <div class="row" id="aboutme">About Me!</div>
         <div class="contents">
             <p>My name is Ismael Jimenez-Jurado! I am in bootcamp to become a Full-stack </br>
             developer! I have skills in HTML, CSS, JavaScript, and Sofftware Quality </br>
             Assurance. I'm working on bettering myself technically within the coding realm</br>
             so that I can focus on CI/CD quality within any organization! </p>
         </div>
-    <div class="row">My Work!</div>
+    <div class="row" id="mywork">My Work!</div>
         <div class="contents">
             <p>Placeholder right now for any portfolio worthy projects for now</p>
         </div>
    </main>
 <footer>
-    <section>Contact me!</section>
-    <h2 class="motto">"Welcome Home Good Hunter"</h2> <!--I want to make sure to
+    <h2 class="motto" id="welcomehome">"Welcome Home Good Hunter"</h2> <!--I want to make sure to
         include on the styling for this that when you hover it changes to "May you
         find your worth in the waking world with a smooth haze"-->
     <!-- here we will need to include closing contents. Links to socials again, information on businesses,
     contact links of other sorts -->
     <ul>
         <nav class="contacts">
-            <a href="https://github.com/Idjjurado">GITHUB</a>
-            <a href="https://dev.to/idjjurado">DEV.TO</a>
-            <a href="mailto:ismael.david.jimenez@gmail.com">Send an EMAIL!</a> 
+            <a class="bottnav" href="https://github.com/Idjjurado" target="_blank">GITHUB</a>
+            <a class="bottnav" href="https://dev.to/idjjurado" target="_blank">DEV.TO</a>
+            <a class="bottnav" href="mailto:ismael.david.jimenez@gmail.com" target="_blank">Send an EMAIL!</a> 
             <!--This will openthe default mail client they use-->
 
         </nav>
