forgot to switch branches so commiting then restarting

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!-- <img src="assets/images/bloodborne-lamp.gif" alt="bloodborne lamp pulsing"> -->
    </header>
    <figure>
+    <img class="mashed">
     <img id="bitmoji" src="assets/images/Avatar for portfolio.png" alt="Avatar of Ismael">
    </figure>
    <main>
