--- a/index.html
+++ b/index.html
@@ -21,20 +21,34 @@
         <!-- <img src="assets/images/bloodborne-lamp.gif" alt="bloodborne lamp pulsing"> -->
    </header>
    <figure>
-    <img class="mashed">
     <img id="bitmoji" src="assets/images/Avatar for portfolio.png" alt="Avatar of Ismael">
    </figure>
    <main>
     <div class="row" id="aboutme">About Me!</div>
-        <div class="contents">
-            <p>My name is Ismael Jimenez-Jurado! I am in bootcamp to become a Full-stack </br>
-            developer! I have skills in HTML, CSS, JavaScript, and Sofftware Quality </br>
+        <div>    
+            <p class="contents">My name is Ismael Jimenez-Jurado! I am in bootcamp to become a Full-stack </br>
+            developer! I have skills in HTML, CSS, JavaScript, and Software Quality </br>
             Assurance. I'm working on bettering myself technically within the coding realm</br>
             so that I can focus on CI/CD quality within any organization! </p>
         </div>
     <div class="row" id="mywork">My Work!</div>
-        <div class="contents">
-            <p>Placeholder right now for any portfolio worthy projects for now</p>
+        <div>    
+            <p class="contents">Placeholder right now for any portfolio worthy projects for now</p>
+            <div class="projects">
+                <section class="card">
+                  <h2>Horiseon Refactor</h2>
+                  <img src="./assets/images/horiseongif.gif" alt="Horiseon Search Engine Optimization"/>
+                  <p>We were tasked with refactoring and enhancing the usability of a companies website!<br>
+                  </p>
+                </section>
+                <section class="card">
+                  <h2>Developer portofolio</h2>
+                  <img src="./assets/images/developerportfolio.gif" alt="Screenshot of my Developer portfolio"/>
+                  <p>This was a project that I worked on from scratch! I had to create <br>
+                  a portfolio to showcase my skillsets and to have something that I can <br>
+                  show to potential employers!</p>
+                </section>
+            </div>
         </div>
    </main>
 <footer>
@@ -44,7 +58,7 @@
     <!-- here we will need to include closing contents. Links to socials again, information on businesses,
     contact links of other sorts -->
     <ul>
-        <nav class="contacts">
+        <nav class="contacts" id="socials">
             <a class="bottnav" href="https://github.com/Idjjurado" target="_blank">GITHUB</a>
             <a class="bottnav" href="https://dev.to/idjjurado" target="_blank">DEV.TO</a>
             <a class="bottnav" href="mailto:ismael.david.jimenez@gmail.com" target="_blank">Send an EMAIL!</a> 
