changing a little text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     <div class="row" id="mywork">My Work!</div>
         <div>    
-            <p class="contents">Placeholder right now for any portfolio worthy projects for now</p>
+            <p class="contents">Here you will some of the projects that I am currently working on or finished!</p>
             <div class="projects">
                 <section class="card">
                   <h2>Horiseon Refactor</h2>
