added links to photos

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <div class="projects">
                 <section class="card">
                   <h2>Horiseon Refactor</h2>
-                  <img src="./assets/images/horiseongif.gif" alt="Horiseon Search Engine Optimization"/>
+                   <a target="_blank" href="https://idjjurado.github.io/Horiseon-refactor/"><img src="./assets/images/horiseongif.gif" alt="Horiseon Search Engine Optimization"/></a>
                   <p>We were tasked with refactoring and enhancing the usability of a companies website!<br>
                   </p>
                 </section>
                 <section class="card">
                   <h2>Developer portofolio</h2>
-                  <img src="./assets/images/developerportfolio.gif" alt="Screenshot of my Developer portfolio"/>
+                  <a target="_blank" href="https://idjjurado.github.io/Portfolio-Ismael-Jimenez-Jurado/"><img src="./assets/images/developerportfolio.gif" alt="Screenshot of my Developer portfolio"/></a>
                   <p>This was a project that I worked on from scratch! I had to create <br>
                   a portfolio to showcase my skillsets and to have something that I can <br>
                   show to potential employers!</p>
