--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                     <a target="_blank" href="https://shonen-strong-785fc5b335e5.herokuapp.com/"><img src="./assets/images/shonenstrong.gif" alt="Screenshot of shonen strong"/></a>
                     <p>This was a fun project to tie anime and working out together!<br></p>
                   </section>
-                    <section class="card">
-                        <h2>Umai Foods</h2>
-                        <a target="_blank" href="https://idjjurado.github.io/UMAI-foods/"><img src="./assets/images/umaifoods.gif" alt="Screenshot of umai foods"/></a>
-                        <p>Here is another group project that we put together that merged<br>
-                        our love of FOOD and ANIME! We enjoyed every bit of this as a passion project!</p>
+                <section class="card">
+                    <h2>Umai Foods</h2>
+                    <a target="_blank" href="https://idjjurado.github.io/UMAI-foods/"><img src="./assets/images/umaifoods.gif" alt="Screenshot of umai foods"/></a>
+                    <p>Here is another group project that we put together that merged<br>
+                    our love of FOOD and ANIME! We enjoyed every bit of this as a passion project!</p>
+                </section>
             </div>
         </div>
    </main>
