--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   </p>
                 </section>
                 <section class="card">
-                  <h2>Developer portofolio</h2>
+                  <h2>Developer portfolio</h2>
                   <a target="_blank" href="https://idjjurado.github.io/Portfolio-Ismael-Jimenez-Jurado/"><img src="./assets/images/developerportfolio.gif" alt="Screenshot of my Developer portfolio"/></a>
                   <p>This was a project that I worked on from scratch! I had to create <br>
                   a portfolio to showcase my skillsets and to have something that I can <br>
@@ -60,6 +60,12 @@
                     <a target="_blank" href="https://idjjurado.github.io/UMAI-foods/"><img src="./assets/images/umaifoods.gif" alt="Screenshot of umai foods"/></a>
                     <p>Here is another group project that we put together that merged<br>
                     our love of FOOD and ANIME! We enjoyed every bit of this as a passion project!</p>
+                </section>
+                <section class="card">
+                    <h2>Half Price Galaxy</h2>
+                    <a target="_blank" href="https://idjjurado.github.io/UMAI-foods/"><img src="./assets/images/hpgalaxy.gif" alt="Screenshot of Half Price Galaxy"/></a>
+                    <p>This was a fun ecommerce site for our final collaboration as fulls tack developers!<br>
+                    This is a MERN full stack application that is used to purchase  intergalactic goods and wares!</p>
                 </section>
             </div>
         </div>
