--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </section>
                 <section class="card">
                     <h2>Half Price Galaxy</h2>
-                    <a target="_blank" href="https://idjjurado.github.io/UMAI-foods/"><img src="./assets/images/hpgalaxy.gif" alt="Screenshot of Half Price Galaxy"/></a>
+                    <a target="_blank" href="https://half-price-galaxy-409660c8c0b6.herokuapp.com/"><img src="./assets/images/hpgalaxy.gif" alt="Screenshot of Half Price Galaxy"/></a>
                     <p>This was a fun ecommerce site for our final collaboration as fulls tack developers!<br>
                     This is a MERN full stack application that is used to purchase  intergalactic goods and wares!</p>
                 </section>
